feat(ai-core): 增强 Python 执行策略容错能力