@@ -10,6 +10,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
 import java.io.StringWriter;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -18,28 +19,26 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Stream;
 
-/**
- * 本地命令行 Python 进程执行策略
- */
 @Slf4j
 @Component
 public class LocalPythonExecutor implements PythonExecutionStrategy {
 
     private static final String[] PYTHON_NAMES = {"python3", "python", "py"};
+
     private final String pythonExecutable;
 
     public LocalPythonExecutor() {
         this.pythonExecutable = checkProgramExists();
         if (this.pythonExecutable != null) {
-            log.info("成功检测到 Python 可执行文件路径: {}", this.pythonExecutable);
+            log.info("Detected local Python executable: {}", this.pythonExecutable);
         } else {
-            log.warn("在系统 PATH 中未找到 Python 可执行文件。LocalPythonExecutor（本地 Python 执行器）将不可用。");
+            log.warn("No local Python executable found in PATH. LocalPythonExecutor is unavailable.");
         }
     }
 
     @Override
     public int getOrder() {
-        return 1; // 优先级最高，首选本地解释器执行
+        return 1;
     }
 
     @Override
@@ -50,7 +49,7 @@ public class LocalPythonExecutor implements PythonExecutionStrategy {
     @Override
     public TaskResponse execute(String code, String inputJson, int timeoutSeconds) {
         if (!isAvailable()) {
-            return TaskResponse.error("系统环境中未找到本地 Python 可执行文件。");
+            return TaskResponse.error("No local Python executable found.");
         }
 
         long startTime = System.currentTimeMillis();
@@ -58,56 +57,38 @@ public class LocalPythonExecutor implements PythonExecutionStrategy {
         Process process = null;
 
         try {
-            // 1. 创建独立临时的隔离运行环境
             tempDir = Files.createTempDirectory("data-agent-py-run-");
             Path scriptFile = tempDir.resolve("script.py");
             Path stdinFile = tempDir.resolve("stdin.json");
 
-            // 2. 写入大模型生成的 Python 代码和标准输入数据集
-            Files.write(scriptFile, code.getBytes());
-            Files.write(stdinFile, inputJson.getBytes());
+            Files.writeString(scriptFile, withJsonSerializationGuard(code), StandardCharsets.UTF_8);
+            Files.writeString(stdinFile, inputJson, StandardCharsets.UTF_8);
 
-            // 3. 构建进程并在临时隔离目录下启动
             ProcessBuilder pb = new ProcessBuilder(pythonExecutable, scriptFile.toAbsolutePath().toString());
             pb.directory(tempDir.toFile());
             pb.redirectInput(stdinFile.toFile());
 
             process = pb.start();
 
-            // 4. 异步并发收集 stdout 与 stderr，防止管道阻塞
             StringWriter stdoutWriter = new StringWriter();
             StringWriter stderrWriter = new StringWriter();
 
-            try (BufferedReader stdoutReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-                 BufferedReader stderrReader = new BufferedReader(new InputStreamReader(process.getErrorStream()))) {
+            try (BufferedReader stdoutReader = new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8));
+                 BufferedReader stderrReader = new BufferedReader(new InputStreamReader(process.getErrorStream(), StandardCharsets.UTF_8))) {
 
-                CompletableFuture<Void> stdoutFuture = CompletableFuture.runAsync(() -> {
-                    try {
-                        stdoutReader.transferTo(stdoutWriter);
-                    } catch (Exception e) {
-                        log.error("Error reading stdout: {}", e.getMessage());
-                    }
-                });
+                CompletableFuture<Void> stdoutFuture = CompletableFuture.runAsync(() -> transferTo(stdoutReader, stdoutWriter, "stdout"));
+                CompletableFuture<Void> stderrFuture = CompletableFuture.runAsync(() -> transferTo(stderrReader, stderrWriter, "stderr"));
 
-                CompletableFuture<Void> stderrFuture = CompletableFuture.runAsync(() -> {
-                    try {
-                        stderrReader.transferTo(stderrWriter);
-                    } catch (Exception e) {
-                        log.error("Error reading stderr: {}", e.getMessage());
-                    }
-                });
-
-                // 5. 挂起控制：带超时防护的进程挂起等待
                 boolean completed = process.waitFor(timeoutSeconds, TimeUnit.SECONDS);
                 if (!completed) {
                     process.destroy();
                     if (process.isAlive()) {
                         process.destroyForcibly();
                     }
-                    return TaskResponse.failure("", "Python 执行超时 (" + timeoutSeconds + "s)。进程已被终止。", System.currentTimeMillis() - startTime);
+                    return TaskResponse.failure("", "Python execution timed out (" + timeoutSeconds + "s).",
+                            System.currentTimeMillis() - startTime);
                 }
 
-                // 额外给予 1 秒收集剩余缓冲区的流
                 CompletableFuture.allOf(stdoutFuture, stderrFuture).get(1, TimeUnit.SECONDS);
             }
 
@@ -116,25 +97,80 @@ public class LocalPythonExecutor implements PythonExecutionStrategy {
             String stderr = stderrWriter.toString().trim();
             long timeMs = System.currentTimeMillis() - startTime;
 
-            log.info("本地 Python 执行完成，退出码：{}，耗时：{} 毫秒", exitCode, timeMs);
+            log.info("Local Python execution completed, exitCode: {}, time: {} ms", exitCode, timeMs);
 
             if (exitCode != 0) {
-                // 如果运行报错，将 stderr 内容返回供模型自愈
-                return TaskResponse.failure(stdout, StringUtils.hasText(stderr) ? stderr : "进程异常退出，错误码: " + exitCode, timeMs);
-            } else {
-                return TaskResponse.success(stdout, timeMs);
+                String fallbackError = "Process exited with non-zero code: " + exitCode;
+                return TaskResponse.failure(stdout, StringUtils.hasText(stderr) ? stderr : fallbackError, timeMs);
             }
+            return TaskResponse.success(stdout, timeMs);
 
         } catch (Exception e) {
-            log.error("运行本地 Python 进程失败", e);
-            return TaskResponse.failure("", "Python 执行异常: " + e.getMessage(), System.currentTimeMillis() - startTime);
+            log.error("Failed to execute local Python process", e);
+            return TaskResponse.failure("", "Python execution exception: " + e.getMessage(),
+                    System.currentTimeMillis() - startTime);
         } finally {
-            // 6. 安全清理：物理级联清除生成的临时文件
             if (process != null && process.isAlive()) {
                 process.destroyForcibly();
             }
             clearTempDir(tempDir);
         }
+    }
+
+    private void transferTo(BufferedReader reader, StringWriter writer, String streamName) {
+        try {
+            reader.transferTo(writer);
+        } catch (Exception e) {
+            log.error("Error reading {}: {}", streamName, e.getMessage());
+        }
+    }
+
+    private String withJsonSerializationGuard(String code) {
+        return """
+                import json as __data_agent_json
+
+                __data_agent_original_json_dumps = __data_agent_json.dumps
+
+                def __data_agent_json_default(obj):
+                    try:
+                        import numpy as __data_agent_np
+                        if isinstance(obj, __data_agent_np.integer):
+                            return int(obj)
+                        if isinstance(obj, __data_agent_np.floating):
+                            return float(obj)
+                        if isinstance(obj, __data_agent_np.bool_):
+                            return bool(obj)
+                        if isinstance(obj, __data_agent_np.ndarray):
+                            return obj.tolist()
+                    except Exception:
+                        pass
+                    try:
+                        import pandas as __data_agent_pd
+                        if obj is __data_agent_pd.NA:
+                            return None
+                        if isinstance(obj, (__data_agent_pd.Timestamp, __data_agent_pd.Timedelta)):
+                            return str(obj)
+                    except Exception:
+                        pass
+                    if hasattr(obj, "item"):
+                        try:
+                            return obj.item()
+                        except Exception:
+                            pass
+                    if hasattr(obj, "tolist"):
+                        try:
+                            return obj.tolist()
+                        except Exception:
+                            pass
+                    return str(obj)
+
+                def __data_agent_safe_json_dumps(obj, *args, **kwargs):
+                    kwargs.setdefault("default", __data_agent_json_default)
+                    return __data_agent_original_json_dumps(obj, *args, **kwargs)
+
+                __data_agent_json.dumps = __data_agent_safe_json_dumps
+
+                """ + code;
     }
 
     private String checkProgramExists() {
@@ -174,9 +210,9 @@ public class LocalPythonExecutor implements PythonExecutionStrategy {
             walk.sorted(Comparator.reverseOrder())
                     .map(Path::toFile)
                     .forEach(File::delete);
-            log.debug("已清理临时执行目录: {}", path);
+            log.debug("Cleaned temp execution directory: {}", path);
         } catch (Exception e) {
-            log.warn("清理临时执行目录失败: {}", path, e);
+            log.warn("Failed to clean temp execution directory: {}", path, e);
         }
     }
 }
